--- a/src/app/pages/filtros/filtros.page.scss
+++ b/src/app/pages/filtros/filtros.page.scss
@@ -7,5 +7,13 @@ ion-footer {
 }
 
 .ion-padding-start {
-    padding-left: 20px;
+    padding-left: 22px;
+}
+
+.ion-padding-start-2x {
+    padding-left: 44px;
+}
+
+.ion-padding-start-3x {
+    padding-left: 66px;
 }
