--- a/src/app/pages/cadastro/cadastro.page.html
+++ b/src/app/pages/cadastro/cadastro.page.html
@@ -17,20 +17,20 @@
   <ion-list-header>
     <ion-label color ="danger">Formulario Template: Valido {{formulario.valid}}</ion-label>
     </ion-list-header>
-    <form class="form" #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
-         <ion-list class="list1">
-         <ion-item >
-            <ion-icon name="person-outline"></ion-icon>
-            <ion-input mode="ios" clearInput="true" placeholder="Nome Completo" name="nome" required></ion-input>
-         </ion-item>
-         <ion-item >
+    <ion-list class="list1">
+        <ion-item>
             <ion-icon name="transgender-outline"></ion-icon>
             <ion-label>Gênero</ion-label>
-            <ion-select mode="ios"  interface="popover" placeholder="Selecionar">
-            <ion-select-option value="Masculino" >Masculino</ion-select-option>
-            <ion-select-option value="Feminino">Feminino</ion-select-option>
-            <ion-select-option value="Outro">Outro</ion-select-option>
+            <ion-select [(ngModel)] = "genero" (ionChange)="onChange($event)" nome="genero" mode="ios"  interface="popover" placeholder="Selecionar">
+            <ion-select-option *ngFor="let item of generos" [value]="item.id">{{ item.text}}</ion-select-option>
             </ion-select>
+        </ion-item>
+    </ion-list>
+    <form class="form" #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
+         <ion-list >
+         <ion-item >
+            <ion-icon name="person-outline"></ion-icon>
+            <ion-input [(ngModel)]="usuario.nome" mode="ios" clearInput="true" placeholder="Nome Completo" name="nome" required></ion-input>
          </ion-item>
          <ion-item>
             <ion-icon name="calendar-outline"></ion-icon>
@@ -38,7 +38,7 @@
          </ion-item>
           <ion-item >
             <ion-icon name="mail-outline"></ion-icon>
-            <ion-input clearInput="true" placeholder="E-mail"  pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" name="email" [(ngModel)]="usuario.email" required></ion-input>
+            <ion-input clearInput="true" placeholder="E-mail"  pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email"  required></ion-input>
          </ion-item>
             <ion-item >
             <ion-icon name="mail-outline"></ion-icon>
@@ -46,7 +46,7 @@
          </ion-item>
          <ion-item >
               <ion-icon name="lock-closed-outline"></ion-icon>
-             <ion-input  placeholder="Senha " type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
+             <ion-input  placeholder="Senha " type="password" name="password1" required></ion-input>
          </ion-item>
           <ion-item >
               <ion-icon name="lock-closed-outline"></ion-icon>
@@ -54,7 +54,7 @@
          </ion-item>
          <ion-item >
             <ion-icon name="card-outline"></ion-icon>
-            <ion-input clearInput="true" placeholder="CPF" name="cpf" required></ion-input>
+            <ion-input clearInput="true" placeholder="CPF" name="cpf" [(ngModel)]="usuario.cpf" required></ion-input>
          </ion-item>
          </ion-list>
 
