--- a/src/app/pages/servicos/servicos.page.html
+++ b/src/app/pages/servicos/servicos.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title slot="start">Serviços</ion-title>
   </ion-toolbar>
 
@@ -28,7 +31,7 @@
 
 <ion-content>
   <ion-card *ngFor="let card of cards">
-    <ion-item>
+    <ion-item lines="full">
       <ion-card-subtitle>{{card.categoria}}</ion-card-subtitle>
       <ion-button fill="clear" slot="end">
         <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
