--- a/src/app/pages/filtros/filtros.page.html
+++ b/src/app/pages/filtros/filtros.page.html
@@ -22,7 +22,7 @@
             <div>
                 <ion-img src="../../assets/subcategoria.svg" class="ion-padding-horizontal"></ion-img>
             </div>
-            <ion-select placeholder="Selecione aqui" [(ngModel)]="selected[0]" (ngModelChange)="selectChanged($event, $0)">
+            <ion-select placeholder="Selecione aqui" [(ngModel)]="selected[0]" (ngModelChange)="selectChanged($event, 0)">
                 <ion-select-option *ngFor="let subcategoria of subcategorias" [value]="subcategoria">{{subcategoria.nome}}</ion-select-option>
             </ion-select>
         </ion-item>
@@ -40,7 +40,7 @@
                 Estado</ion-label>
             <ion-item lines="none">
                 <ion-icon slot="start" icon="location-outline"></ion-icon>
-                <ion-select placeholder="Selecione aqui" [(ngModel)]="selected[1]" (ngModelChange)="selectChanged($event, $1)">
+                <ion-select placeholder="Selecione aqui" [(ngModel)]="selected[1]" (ngModelChange)="selectChanged($event, 1)">
                     <ion-select-option *ngFor="let estado of estados" [value]="estado">{{estado.nome}}</ion-select-option>
                 </ion-select>
             </ion-item>
@@ -50,7 +50,7 @@
                 Cidade</ion-label>
             <ion-item lines="none">
                 <ion-icon slot="start" icon="location-outline"></ion-icon>
-                <ion-select placeholder="Selecione aqui" [(ngModel)]="selected[2]" (ngModelChange)="selectChanged($event, $2)">
+                <ion-select placeholder="Selecione aqui" [(ngModel)]="selected[2]" (ngModelChange)="selectChanged($event, 2)">
                     <ion-select-option *ngFor="let cidade of cidades" [value]="cidade">{{cidade.nome}}</ion-select-option>
                 </ion-select>
             </ion-item>
@@ -70,7 +70,7 @@
                 Faixa de Preço</ion-label>
             <ion-item lines="none">
                 <ion-icon slot="start" icon="pricetags"></ion-icon>
-                <ion-select placeholder="Selecione aqui" [(ngModel)]="selected[3]" (ngModelChange)="selectChanged($event, $3)">
+                <ion-select placeholder="Selecione aqui" [(ngModel)]="selected[3]" (ngModelChange)="selectChanged($event, 3)">
                     <ion-select-option *ngFor="let faixaPreco of faixasPrecos" [value]="faixaPreco">R${{faixaPreco.minimo}},00 - R${{faixaPreco.maximo}},00</ion-select-option>
                 </ion-select>
             </ion-item>
@@ -84,7 +84,7 @@
             <ion-item detail lines="none">
                 <ion-icon slot="start" icon="calendar"></ion-icon>
                 <ion-datetime placeholder="Selecione uma data" min="2021" display-format="DD/MM/YYYY" picker-format="DD/MMMM/YYYY " dayShortNames="Dom, Seg, Ter, Qua, Qui, Sex, Sáb" dayNames="Domingo, Segunda, Terça, Quarta, Quinta, Sexta, Sábado
-                " monthShortNames="Jan, Fev, Mar, Abr, Maio, Jun, Jul, Ago, Set, Out, Nov, Dez" monthNames="Janeiro, Fevereiro, Março, Abril, Maio, Junho, Julho, Agosto, Setembro, Outubro, Novembro, Dezembro" [(ngModel)]="selected[4]" (ngModelChange)="selectChanged($event, $4)"></ion-datetime>
+                " monthShortNames="Jan, Fev, Mar, Abr, Maio, Jun, Jul, Ago, Set, Out, Nov, Dez" monthNames="Janeiro, Fevereiro, Março, Abril, Maio, Junho, Julho, Agosto, Setembro, Outubro, Novembro, Dezembro" [(ngModel)]="selected[4]" (ngModelChange)="selectChanged($event, 4)"></ion-datetime>
             </ion-item>
         </ion-list>
     </ion-list>
