Tela Central de Ajuda

--- a/src/app/pages/filtros/filtros.page.html
+++ b/src/app/pages/filtros/filtros.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button></ion-back-button>
         </ion-buttons>
-        <ion-title slot="start" class="ion-no-padding ion-text-start ion-padding-start-2x">
+        <ion-title slot="start" class="ion-text-start ion-padding-start-3x">
             Filtros
         </ion-title>
     </ion-toolbar>
