--- a/src/app/pages/cadastro/cadastro.page.html
+++ b/src/app/pages/cadastro/cadastro.page.html
@@ -1,68 +1,70 @@
 <ion-header>
-<ion-toolbar color="primary">
-   <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-  <ion-title><div class="n1">
-          <ion-button color="light" fill="outline"  size="default">
-      E-BICOS
-      </ion-button>
-      </div>
-      <div class="n2">
-      <ion-label >Cadastre-se gratuitamente! <br>É muito simples</ion-label>
-      </div></ion-title>
-</ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button text="" mode="md"></ion-back-button>
+        </ion-buttons>
+        <ion-title>
+            <div class="n1">
+                <ion-button color="light" fill="outline" size="default">
+                    E-BICOS
+                </ion-button>
+            </div>
+            <div class="n2">
+                <ion-label>Cadastre-se gratuitamente! <br>É muito simples</ion-label>
+            </div>
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-list-header>
-    <ion-label color ="danger">Formulario Template: Valido {{formulario.valid}}</ion-label>
+    <ion-list-header>
+        <ion-label color="danger">Formulario Template: Valido {{formulario.valid}}</ion-label>
     </ion-list-header>
     <ion-list class="list1">
         <ion-item>
             <ion-icon name="transgender-outline"></ion-icon>
             <ion-label>Gênero</ion-label>
-            <ion-select [(ngModel)] = "genero" (ionChange)="onChange($event)" nome="genero" mode="ios"  interface="popover" placeholder="Selecionar">
-            <ion-select-option *ngFor="let item of generos" [value]="item.id">{{ item.text}}</ion-select-option>
+            <ion-select [(ngModel)]="genero" (ionChange)="onChange($event)" nome="genero" mode="ios" interface="popover" placeholder="Selecionar">
+                <ion-select-option *ngFor="let item of generos" [value]="item.id">{{ item.text}}</ion-select-option>
             </ion-select>
         </ion-item>
     </ion-list>
     <form class="form" #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
-         <ion-list >
-         <ion-item >
-            <ion-icon name="person-outline"></ion-icon>
-            <ion-input [(ngModel)]="usuario.nome" mode="ios" clearInput="true" placeholder="Nome Completo" name="nome" required></ion-input>
-         </ion-item>
-         <ion-item>
-            <ion-icon name="calendar-outline"></ion-icon>
-            <ion-datetime cancelText="Cancelar" doneText="Confirmar" mode="ios" displayFormat="DD MM YYYY" placeholder="Data Nascimento"></ion-datetime>
-         </ion-item>
-          <ion-item >
-            <ion-icon name="mail-outline"></ion-icon>
-            <ion-input clearInput="true" placeholder="E-mail"  pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email"  required></ion-input>
-         </ion-item>
-            <ion-item >
-            <ion-icon name="mail-outline"></ion-icon>
-            <ion-input clearInput="true" placeholder="Confirme o E-mail"  pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" name="email" [(ngModel)]="usuario.email" required></ion-input>
-         </ion-item>
-         <ion-item >
-              <ion-icon name="lock-closed-outline"></ion-icon>
-             <ion-input  placeholder="Senha " type="password" name="password1" required></ion-input>
-         </ion-item>
-          <ion-item >
-              <ion-icon name="lock-closed-outline"></ion-icon>
-             <ion-input  placeholder="Confirme a senha" type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
-         </ion-item>
-         <ion-item >
-            <ion-icon name="card-outline"></ion-icon>
-            <ion-input clearInput="true" placeholder="CPF" name="cpf" [(ngModel)]="usuario.cpf" required></ion-input>
-         </ion-item>
-         </ion-list>
+        <ion-list>
+            <ion-item>
+                <ion-icon name="person-outline"></ion-icon>
+                <ion-input [(ngModel)]="usuario.nome" mode="ios" clearInput="true" placeholder="Nome Completo" name="nome" required></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="calendar-outline"></ion-icon>
+                <ion-datetime cancelText="Cancelar" doneText="Confirmar" mode="ios" displayFormat="DD MM YYYY" placeholder="Data Nascimento"></ion-datetime>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="mail-outline"></ion-icon>
+                <ion-input clearInput="true" placeholder="E-mail" pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" required></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="mail-outline"></ion-icon>
+                <ion-input clearInput="true" placeholder="Confirme o E-mail" pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" name="email" [(ngModel)]="usuario.email" required></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="lock-closed-outline"></ion-icon>
+                <ion-input placeholder="Senha " type="password" name="password1" required></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="lock-closed-outline"></ion-icon>
+                <ion-input placeholder="Confirme a senha" type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="card-outline"></ion-icon>
+                <ion-input clearInput="true" placeholder="CPF" name="cpf" [(ngModel)]="usuario.cpf" required></ion-input>
+            </ion-item>
+        </ion-list>
 
-      <div class="n3" >
-        <button class="btnEntrar" type="submit" [disabled]="formulario.invalid" >
+        <div class="n3">
+            <button class="btnEntrar" type="submit" [disabled]="formulario.invalid">
         Concluir Cadastro
         </button>
-       </div>
+        </div>
     </form>
 
 </ion-content>
