--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -1,9 +1,9 @@
 <ion-header>
     <ion-toolbar color="primary">
-        <ion-buttons slot="start">
-            <ion-back-button></ion-back-button>
+        <ion-buttons slot="start" class="ion-padding-start">
+            <ion-back-button defaultHref="servicos" text="" icon="close"></ion-back-button>
         </ion-buttons>
-        <ion-title slot="start" class="ion-no-padding ion-text-start ion-padding-start-2x">
+        <ion-title slot="start" class="ion-text-start ion-padding-start-MeuPerfilLabel">
             Meu Perfil
         </ion-title>
     </ion-toolbar>
