--- a/src/app/pages/entrar/entrar.page.html
+++ b/src/app/pages/entrar/entrar.page.html
@@ -1,50 +1,51 @@
 <ion-header>
-<ion-toolbar color="primary">
-   <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-  <ion-title>
-     <div class="n1">
-      <label>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button text="" mode="md"></ion-back-button>
+        </ion-buttons>
+        <ion-title>
+            <div class="n1">
+                <label>
       Entrar no seu perfil
       </label>
-      </div>
-      <div class="n2">
-      <label >Bem-vindo(a) de volta ao E-BICOS</label>
-      </div></ion-title>
-</ion-toolbar>
+            </div>
+            <div class="n2">
+                <label>Bem-vindo(a) de volta ao E-BICOS</label>
+            </div>
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
     <ion-list-header>
-    <ion-label color ="danger">Formulario Template: Valido {{formulario.valid}}</ion-label>
+        <ion-label color="danger">Formulario Template: Valido {{formulario.valid}}</ion-label>
     </ion-list-header>
 
     <form class="form1" #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
-      <ion-list class="list1">
-      <ion-label class="lab">Email</ion-label>
-         <ion-item lines="none" >
-             <ion-input clearInput="true" placeholder="exemple@gmail.com"  pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" name="email" [(ngModel)]="usuario.email" required></ion-input>
-         </ion-item>
-        <div class="lab"></div>
-         <ion-label class="lab">Senha</ion-label>
-          <ion-item lines="none">
-             <ion-input  placeholder="password" type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
-         </ion-item>
-      <ion-label (click)="alert()" class="lab">Esqueceu a senha ?</ion-label>
-      </ion-list>
+        <ion-list class="list1">
+            <ion-label class="lab">Email</ion-label>
+            <ion-item lines="none">
+                <ion-input clearInput="true" placeholder="exemple@gmail.com" pattern="^([a-z0-9._\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="email" name="email" [(ngModel)]="usuario.email" required></ion-input>
+            </ion-item>
+            <div class="lab"></div>
+            <ion-label class="lab">Senha</ion-label>
+            <ion-item lines="none">
+                <ion-input placeholder="password" type="password" name="password" [(ngModel)]="usuario.password" required></ion-input>
+            </ion-item>
+            <ion-label (click)="alert()" class="lab">Esqueceu a senha ?</ion-label>
+        </ion-list>
 
-      <div class="n3" >
-        <button class= "btnEntrar" type="submit" [disabled]="formulario.invalid" >
+        <div class="n3">
+            <button class="btnEntrar" type="submit" [disabled]="formulario.invalid">
         Entrar
         </button>
-       </div>
+        </div>
     </form>
 
     <div class="n3">
-     <ion-button (click)="showPageCadastrar()"  color="dark" fill="outline" size="large">
-        Criar Perfil
+        <ion-button (click)="showPageCadastrar()" color="dark" fill="outline" size="large">
+            Criar Perfil
         </ion-button>
     </div>
 
