--- a/src/app/pages/filtros/filtros.page.html
+++ b/src/app/pages/filtros/filtros.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button></ion-back-button>
+            <ion-back-button text="" mode="md"></ion-back-button>
         </ion-buttons>
         <ion-title slot="start" class="ion-text-start ion-padding-start-3x">
             Filtros
