--- a/src/app/pages/perfil/perfil.page.scss
+++ b/src/app/pages/perfil/perfil.page.scss
@@ -27,6 +27,10 @@ ion-toolbar {
     padding-left: 42px;
 }
 
+.ion-padding-start-MeuPerfilLabel {
+    padding-left: 66px;
+}
+
 ion-avatar {
     width: 60px;
     height: 60px;
